@@ -57,62 +57,81 @@ public class ThesisServiceImpl implements ThesisService {
         String description = payload.get("description");
         String semester = payload.get("semester");
         String yearStr = payload.get("year");
+        String boardIdStr = payload.get("boardId");
 
-        String board_id = payload.get("boardId");
-        if (title == null || title.trim().isEmpty()) {
-            throw new IllegalArgumentException("Title không được để trống");
-        }
-        if (yearStr == null || yearStr.trim().isEmpty()) {
-            throw new IllegalArgumentException("Year không được để trống");
+        // Validate bắt buộc
+        if (title == null || title.isBlank()) {
+            throw new IllegalArgumentException("Tiêu đề không được để trống");
         }
 
-        int year = Integer.parseInt(yearStr.trim());
-        if (year < 1 || year >3) {
-            throw new IllegalArgumentException("Year không hợp lệ");
-        }
-        if (description != null) {
-            t.setDescription(description);
-        }
-        if (semester == null || semester.trim().isEmpty()) {
-            throw new IllegalArgumentException("Semester không được để trống");
+        if (semester == null || semester.isBlank()) {
+            throw new IllegalArgumentException("Học kỳ không được để trống");
         }
 
-        if (board_id == null || board_id.trim().isEmpty()) {
-            throw new IllegalArgumentException("BoardId không được để trống");
+        if (yearStr == null || yearStr.isBlank()) {
+            throw new IllegalArgumentException("Năm không được để trống");
         }
 
-        if (board_id != null) {
-            int id = Integer.parseInt(board_id.trim());
-            Board b = boardRepo.getBoardById(id);
-            if (b == null) {
-                throw new IllegalArgumentException("Board không tồn tại");
+        int year;
+        try {
+            year = Integer.parseInt(yearStr.trim());
+            if (year < 1 || year > 3) {
+                throw new IllegalArgumentException("Năm không hợp lệ (phải từ 1 đến 3)");
             }
-
-            // 💡 Kiểm tra số lượng thesis đã thuộc về hội đồng này
-            List<Thesis> thesisList = thesisRepo.getThesesByBoardId(id);  // 👈 bạn cần thêm hàm này
-            if (thesisList.size() >= 5) {
-                throw new IllegalArgumentException("Hội đồng này đã được phân công tối đa 5 đề tài.");
-            }
-            t.setBoardId(b);
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException("Năm phải là số");
         }
+
+        // Validate hội đồng
+        if (boardIdStr == null || boardIdStr.isBlank()) {
+            throw new IllegalArgumentException("Hội đồng không được để trống");
+        }
+
+        int boardId;
+        try {
+            boardId = Integer.parseInt(boardIdStr.trim());
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException("Board ID phải là số");
+        }
+
+        Board board = boardRepo.getBoardById(boardId);
+        if (board == null) {
+            throw new IllegalArgumentException("Không tìm thấy hội đồng");
+        }
+
+        // Kiểm tra số lượng đề tài trong hội đồng
+        List<Thesis> existing = thesisRepo.getThesesByBoardId(boardId);
+        if (existing.size() >= 5) {
+            throw new IllegalArgumentException("Hội đồng này đã có tối đa 5 đề tài");
+        }
+
+        // Gán dữ liệu
         t.setTitle(title.trim());
+        t.setSemester(semester.trim());
         t.setYear(year);
-        Thesis savedThesis = this.thesisRepo.addOrUpdate(t);
-// 🔹 Gắn sinh viên nếu có
-        String studentIdStr = payload.get("studentId");  // key đổi từ studentIds → studentId (dạng chuỗi)
-        if (studentIdStr != null && !studentIdStr.trim().isEmpty()) {
-            int studentId = Integer.parseInt(studentIdStr.trim());
-            Student s = studentRepo.getStudentByUserId(studentId);
-            if (s == null) {
-                throw new IllegalArgumentException("Không tìm thấy sinh viên với ID: " + studentId);
-            }
+        t.setBoardId(board);
+        t.setDescription(description != null ? description.trim() : null);
 
-            // Gán thesis cho sinh viên
-            s.setThesisId(savedThesis);
-            studentRepo.updateStudent(s);
+        Thesis saved = thesisRepo.addOrUpdate(t);
+
+        // Gán sinh viên nếu có
+        String studentIdStr = payload.get("studentId");
+        if (studentIdStr != null && !studentIdStr.isBlank()) {
+            try {
+                int studentId = Integer.parseInt(studentIdStr.trim());
+                Student s = studentRepo.getStudentByUserId(studentId);
+                if (s == null) {
+                    throw new IllegalArgumentException("Không tìm thấy sinh viên với ID: " + studentId);
+                }
+
+                s.setThesisId(saved);
+                studentRepo.updateStudent(s);
+            } catch (NumberFormatException e) {
+                throw new IllegalArgumentException("Student ID không hợp lệ");
+            }
         }
 
-        return savedThesis;
+        return saved;
     }
 
     @Override
@@ -121,37 +140,64 @@ public class ThesisServiceImpl implements ThesisService {
         if (t == null) {
             throw new IllegalArgumentException("Không tìm thấy đề tài.");
         }
+
         String title = payload.get("title");
         String description = payload.get("description");
+        String semester = payload.get("semester");
         String yearStr = payload.get("year");
-        String board_id = payload.get("board_id");
+        String boardIdStr = payload.get("boardId");
 
-        if (title == null || title.trim().isEmpty()) {
-            throw new IllegalArgumentException("Title không được để trống");
+        // Validate bắt buộc
+        if (title == null || title.isBlank()) {
+            throw new IllegalArgumentException("Tiêu đề không được để trống");
         }
-        if (yearStr == null || yearStr.trim().isEmpty()) {
-            throw new IllegalArgumentException("Year không được để trống");
+
+        if (semester == null || semester.isBlank()) {
+            throw new IllegalArgumentException("Học kỳ không được để trống");
         }
-        int year = Integer.parseInt(yearStr.trim());
-        if (year <= 0) {
-            throw new IllegalArgumentException("Year không được âm");
+
+        if (yearStr == null || yearStr.isBlank()) {
+            throw new IllegalArgumentException("Năm không được để trống");
         }
-        if (description != null) {
-            t.setDescription(description);
-        }
-        if (board_id == null || board_id.trim().isEmpty()) {
-            throw new IllegalArgumentException("BoardId không được để trống");
-        }
-        if (board_id != null) {
-            int boardId = Integer.parseInt(board_id.trim());
-            Board b = boardRepo.getBoardById(boardId);
-            if (b == null) {
-                throw new IllegalArgumentException("Board không tồn tại");
+
+        int year;
+        try {
+            year = Integer.parseInt(yearStr.trim());
+            if (year <= 0) {
+                throw new IllegalArgumentException("Năm không hợp lệ");
             }
-            t.setBoardId(b);
+        } catch (NumberFormatException ex) {
+            throw new IllegalArgumentException("Năm phải là số");
         }
+
+        if (boardIdStr == null || boardIdStr.isBlank()) {
+            throw new IllegalArgumentException("Hội đồng không được để trống");
+        }
+
+        int boardId;
+        try {
+            boardId = Integer.parseInt(boardIdStr.trim());
+        } catch (NumberFormatException ex) {
+            throw new IllegalArgumentException("Board ID phải là số");
+        }
+
+        Board board = boardRepo.getBoardById(boardId);
+        if (board == null) {
+            throw new IllegalArgumentException("Không tìm thấy hội đồng");
+        }
+
+        // Cập nhật dữ liệu
         t.setTitle(title.trim());
+        t.setSemester(semester.trim());
         t.setYear(year);
-        return this.thesisRepo.addOrUpdate(t);
+        t.setBoardId(board);
+        t.setDescription(description != null ? description.trim() : null);
+
+        return thesisRepo.addOrUpdate(t);
+    }
+
+    @Override
+    public List<Thesis> getThesisByName(String kw) {
+        return this.thesisRepo.getThesisByName(kw);
     }
 }
